--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documents of Banking Technologies Consulting</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+          Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      }
+      main {
+        padding: 1rem 2rem;
+        background-color: #f7f7f7;
+        min-height: 100vh;
+        display: flex;
+        flex-direction: column;
+      }
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+      }
+      h3 {
+        font-size: 1.2rem;
+        margin-bottom: 0.5rem;
+      }
+      ul {
+        list-style: none;
+        margin-bottom: 1rem;
+      }
+      li {
+        margin-bottom: 0.5rem;
+      }
+    </style>
   </head>
   <body>
-    <h1>Documents of Banking Technologies Consulting</h1>
-    <h2>Welcome !</h2>
+    <main>
+      <h1>Documents of Banking Technologies Consulting</h1>
+
+      <div style="padding: 1rem 0; border-bottom: 1px solid #ccc; border-top: 1px solid #ccc">
+        <h3>Confiao</h3>
+        <ul>
+          <li><a href="/confiao-privacidad.html">Privacidad</a></li>
+          <li><a href="/confiao-terminos.html">Términos</a></li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
